[tool.poetry]
name = "mtscup"
version = "0.1.0"
description = ""
authors = ["vdmitrii <vdmitrii.ln@gmail.com>"]
readme = "README.md"
packages = [{include = "mtscup", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^2.57.2"
great-expectations = "^0.16.13"
dvc-gdrive = "^2.19.2"

[tool.poetry.group.test.dependencies]
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
